# fantastic_otter

./: README.md  pyproject.toml
.github/: deploy_wheel.yml
.github/workflows/: deploy_wheel.yml
fantastic_otter/: speak.py
wheel/: fantastic_otter-1.0.0.dev0-py3-none-any.whl
